Add .config/flameshot/flameshot.ini Update repos.sh.templ

--- a/run_once_repos.sh.templ
+++ b/run_once_repos.sh.templ
@@ -21,4 +21,7 @@ sudo pacman -U 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg
 #instalace paru (yay)
 sudo pacman -S paru --noconfirm --needed
 
+#nix
+sudo pacman -S nix --noconfirm --needed
 
+echo "Restartuj PC! (jinak třeba flatpak bude dělat pordel s odkazy)"
